NIFI-13125: add version diff modal

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/dialog.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/dialog.css
@@ -457,3 +457,8 @@ div.fetch-parameters-step {
     background-color: transparent;
     float: right;
 }
+
+.show-flow-changes-table {
+    height: 300px;
+    overflow-y: scroll;
+}
