NIFI-13154: show property value if parameter reference in new ui

--- a/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/property-table/property-table.component.html
+++ b/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/property-table/property-table.component.html
@@ -65,7 +65,7 @@
                             } @else {
                                 <ng-container
                                     *ngTemplateOutlet="
-                                        isSensitiveProperty(item.descriptor) ? sensitive : nonSensitive;
+                                        isSensitiveProperty(item.descriptor) && !isParameterRef(item.value) ? sensitive : nonSensitive;
                                         context: { $implicit: resolvePropertyValue(item) }
                                     "></ng-container>
                                 <ng-template #sensitive>
