NIFI-14319: add unit test coverage

--- a/nifi-frontend/src/main/frontend/apps/nifi-registry/src/app/pages/expolorer/feature/ui/delete-droplet-dialog/delete-droplet-dialog.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi-registry/src/app/pages/expolorer/feature/ui/delete-droplet-dialog/delete-droplet-dialog.component.html
@@ -25,7 +25,7 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-flat-button (click)="deleteDroplet(droplet)" mat-dialog-close class="pl-2">
+    <button mat-flat-button (click)="deleteDroplet(droplet)" mat-dialog-close class="pl-2" data-test-id="delete-btn">
         Delete
     </button>
 </mat-dialog-actions>
