--- a/nifi-frontend/src/main/frontend/apps/nifi-registry/src/app/pages/expolorer/feature/ui/export-flow-version-dialog/export-flow-version-dialog.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi-registry/src/app/pages/expolorer/feature/ui/export-flow-version-dialog/export-flow-version-dialog.component.html
@@ -39,7 +39,7 @@ limitations under the License.
     <button mat-button mat-dialog-close type="button">
         Cancel
     </button>
-    <button mat-flat-button class="pl-2" data-automation-id="export-versioned-flow-button" (click)="exportVersion()">
+    <button mat-flat-button class="pl-2" data-automation-id="export-versioned-flow-button" (click)="exportVersion()" data-test-id="export-btn">
         Export
     </button>
 </mat-dialog-actions>
